--- a/src/assets/scss/paper-dashboard/_sidebar-and-main-panel.scss
+++ b/src/assets/scss/paper-dashboard/_sidebar-and-main-panel.scss
@@ -17,7 +17,7 @@
     bottom: 0;
     width: 260px;
     left: 0;
-    z-index: 1030;
+    z-index: 0;
     border-right: 1px solid #ddd;
 
     .sidebar-wrapper{
@@ -314,6 +314,19 @@
     .header{
         margin-bottom: 50px;
     }
+
+    .openbtn {
+        border: none;
+        background: none;
+        font-size: 25px;
+        margin-right: 10px;
+
+        &:focus {
+            outline: none;
+            box-shadow: none;
+        }
+    }
+
 }
 
 
